💅 kitty border color added

--- a/extras/kitty_onedark_.conf
+++ b/extras/kitty_onedark_.conf
@@ -12,7 +12,10 @@ active_tab_background #61afef
 active_tab_foreground #282c34
 inactive_tab_background #abb2bf
 inactive_tab_foreground #282c34
-#tab_bar_background #20232A
+
+# Windows Border
+active_border_color #393f4a
+inactive_border_color #393f4a
 
 # normal
 color0 #20232A
