Fix: Yellow color updated for terminal themes

--- a/extras/alacritty_onedark.yml
+++ b/extras/alacritty_onedark.yml
@@ -15,7 +15,7 @@ colors:
     black:   '0x20232A'
     red:     '0xe86671'
     green:   '0x98c379'
-    yellow:  '0xe0af68'
+    yellow:  '0xe5c07b'
     blue:    '0x61afef'
     magenta: '0xc678dd'
     cyan:    '0x56b6c2'
@@ -26,7 +26,7 @@ colors:
     black:   '0x21252b'
     red:     '0xe86671'
     green:   '0x98c379'
-    yellow:  '0xe0af68'
+    yellow:  '0xe5c07b'
     blue:    '0x61afef'
     magenta: '0xc678dd'
     cyan:    '0x56b6c2'
